force-app/main/default/objects/AccountSettings__c/fields/MailGunApiKey__c.field-meta.xml
<CustomField>
    <fullName>MailGunApiKey__c</fullName>
    <description>API Key for Mail Gun Integration</description>
    <label>MailGun Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>