force-app/main/default/objects/AccountSettings__c/fields/MailGunSenderEmail__c.field-meta.xml
<CustomField>
    <fullName>MailGunSenderEmail__c</fullName>
    <description>Sender Email used for Mail Gun emails</description>
    <label>MailGun Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>