force-app/main/default/objects/AccountSettings__c/fields/RegexForSendingMail__c.field-meta.xml
<CustomField>
    <fullName>RegexForSendingMail__c</fullName>
    <description>Regex for matching Account Name to send mail.</description>
    <label>Regex For Sending Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>