force-app/main/default/objects/AccountSettings__c/fields/TRG_SendMailOnMatch__c.field-meta.xml
<CustomField>
    <fullName>TRG_SendMailOnMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to switch on/off sending mail on name matching.</description>
    <label>TRG_SendMailOnMatch</label>
    <type>Checkbox</type>
</CustomField>